plugins {
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management'  version '1.1.0'
    id 'java'
    id 'groovy'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.82.Final:osx-aarch_64'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //implementation 'org.hibernate.validator:hibernate-validator:6.0.19.Final'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'no.fintlabs:fint-kafka:3.0.0-rc-1'
    implementation 'no.fintlabs:fint-flyt-cache:1.0.0'
    implementation 'org.ehcache:ehcache:3.10.6'
    implementation 'net.sf.ehcache:ehcache:2.10.9.2'
    implementation 'no.fintlabs:fint-antlr:1.1.1'
    //implementation 'no.fintlabs:fint-flyt-resource-server:0.0.1'
    implementation 'no.fintlabs:fint-resource-server-security:1.1.0'
    implementation 'no.fintlabs:fint-kontroll-auth:1.2.4'
    implementation 'no.fint:fint-model-resource:0.4.1'
    implementation 'io.projectreactor:reactor-core'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    //implementation 'jakarta.servlet:jakarta.servlet-api'
}

test {
    useJUnitPlatform()
}
